# alxx

./: CMakeLists.txt  source.hpp
include/: CMakeLists.txt
include/al++/: al++.hpp  atomic_cas.hpp  buffer.hpp  context.hpp  device.hpp  error.hpp  listener.hpp  repack.hpp  singleton.hpp  source.hpp  stream.hpp  taskremapper.hpp
src/: CMakeLists.txt  al++.cpp  test.cpp
src/examples/: CMakeLists.txt  epiano.h  extensions.cpp  simple.cpp  stream.cpp
